assets/scss/partials/variables.scss
//---------------------------
// VARIABLES
@use 'sass:math';
@import "functions";


//---------------------------
// VARIABLES: COLORS

// Colors: brand
$brand-1: #3ABB8D;
$brand-1-light: #75C8AA;
$brand-1-x-light: #C7E9DD;
$brand-2: #313C5A;
$brand-2-light: #41568C;

// Colors: warm
$red-crimson: #D05858;

// Colors: cool
$blue-aqua: #3E9CD0;

// Colors: Black, White, Gray Spectrum
$black: #000;
$gray-coal: #222;
$gray-lead: #666;
$gray-cement: #999;
$gray-titanium: #AAA;
$gray-cloud: #DADEE8;
$gray-mist: #F1F1F1;
$white: #FFF;

// Colors: typography
$color-font: $gray-lead;
$color-link: $brand-1;
$color-link-hover: $brand-2-light;

// Colors: states
$color-focus: $brand-1-light;
$color-error: $red-crimson;
$color-success: $brand-1;
$color-info: $brand-2-light;
$color-disabled: $gray-mist;


//---------------------------
// VARIABLES: COLORS

// Fonts: families
$font-family-1: 'Nunito Sans', sans-serif;

// Fonts: weight
$font-regular: 400;
$font-semi-bold: 600;
$font-bold: 700;

// Fonts: line-height
$line-height: 1.35;

// Fonts: sizes
$font-size: toRem(14px);
$font-size-xs: toRem(10px);
$font-size-sm: toRem(12px);
$font-size-lg: toRem(16px);
$font-size-xl: toRem(20px);

// Fonts: headings: sizes
$h1: toRem(24px);
$h2: toRem(22px);
$h3: toRem(20px);
$h4: toRem(18px);
$h5: toRem(16px);
$h6: toRem(14px);

// Font icons: families
$font-family-icon: 'icomoon';
$icon-path: '../font-icons';

// Font icons: spacing: left and right
$icon-spacing: toRem(5px);
$icon-spacing-lg: ($icon-spacing * 2);

// Font icons: sizes
$icon-size-lg: toRem(16px);
$icon-size-xl: toRem(18px);
$icon-size-xxl: toRem(24px);

//-------------------
// VARIABLES: Spacing
// Use for paddings, margins, etc.

$spacing: toRem(10px);
$spacing-2: ($spacing * 2);
$spacing-3: ($spacing * 3);
$spacing-4: ($spacing * 4);
$spacing-5: ($spacing * 5);
$spacing-6: ($spacing * 6);
$spacing-7: ($spacing * 7);
$spacing-8: ($spacing * 8);
$spacing-half: math.div($spacing, 2);
$spacing-xl: toRem(125px);

//----------------
// VARIABLES: Transition
$transition-linear: all 200ms linear;
$transition-ease-in: all 200ms ease-in;

//-----------------
// VARIABLES: Border radius
$border-radius: toRem(10px);
$border-radius-lg: ($border-radius * 2);
$border-radius-xl: ($border-radius * 3);

//-----------------
// VARIABLES: Buttons
$btn-padding-v: $spacing;
$btn-padding-v-sm: $spacing-half;
$btn-padding-v-xs: $spacing-half;

$btn-padding-h: $spacing-3;
$btn-padding-h-sm: math.div($spacing-3, 2);
$btn-padding-h-xs: math.div($spacing-3, 2);

//----------------
// VARIABLES: inputs

$color-input-border: $gray-cloud;
$color-input-placeholder: $gray-titanium;

// VARIABLES: box-shadow

$box-shadow: 0 toRem(4px) toRem(10px) rgba($black, 0.1);

// VARIABLES: assets path

$svg-path: '../svg';

// ----------------------------
// VARIABLES: media queries breakpoints
$media-lg: toRem(1200px);
$media-md: toRem(900px);
$media-sm: toRem(452px);

$toRem1px: toRem(1px);

$media-lg: $media-lg - $toRem1px;
$media-md: $media-md - $toRem1px;
$media-sm: $media-sm - $toRem1px;


// ----------------------------
// VARIABLES: grid gutters
$grid-column-count: 12;
$grid-gutter: toRem(7.5px);
$grid-gutter-sm: math.div($grid-gutter, 2);
$grid-gutter-lg: ($grid-gutter * 2);


// VARIABLES: media queries breakpoints

$grid-breakpoints: (
        xs: 0,
        sm: 576px,
        md: 768px,
        lg: 992px,
        xl: 1200px,
        xxl: 1400px
);

